# mipt-financial-technologies

./: .gitignore  controle_arbeit_2.ipynb  pyproject.toml
0-adapt/: default.ipynb
1-datetime-task/: 1-datetime-task.ipynb
1-semester/advanced-python/0-adapt/: default.ipynb
1-semester/advanced-python/10-cluster/: 1-cluster.ipynb
1-semester/advanced-python/2-files-and-packages/: purchase-log.txt
1-semester/advanced-python/5-pandas/: 5-pandas.ipynb
1-semester/advanced-python/7-plots/: plots.ipynb
1-semester/advanced-python/9-correlatoin/: 9-correlation.ipynb
1-semester/advanced-python/9-random/: random.ipynb
1-semester/big-data/10-spark/: spark.ipynb
1-semester/big-data/3-machine-learning/: machine-learning.ipynb
1-semester/big-data/8-uplift/: uplift.ipynb
1-semester/big-data/final-task/: final.ipynb  usdrub-data.xlsx
1-semester/econometrics/: final.ipynb  project.ipynb  task-3.ipynb
1-semester/parallel-technologies/: task-1.txt  task2-.txt  task3.txt
2-files-and-packages/: 2-files-and-packages.ipynb
3-rate/: rate.ipynb
4-regexp/: regexp.ipynb
