[tool.poetry]
name = "mipt-advanced-python"
version = "0.1.0"
description = ""
authors = ["reqww <my.gurbanov@gmail.com>"]
readme = "README.md"
packages = [{include = "mipt_advanced_python"}]

[tool.poetry.dependencies]
python = "^3.11.3"
requests = "^2.31.0"
ipykernel = "^6.26.0"
mpmath = "^1.3.0"
matplotlib = "^3.8.0"
pandas = "^2.1.2"
seaborn = "^0.13.0"
pyspark = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
